cmake_minimum_required(VERSION 3.23)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm main.cpp halfFind.cpp halfFind.h dfswithcutleaf/leetcode46.cpp dfswithcutleaf/leetcode46.h dfswithcutleaf/leetcode47.cpp dfswithcutleaf/leetcode47.h dfswithcutleaf/leetcode39.cpp dfswithcutleaf/leetcode39.h dfswithcutleaf/leetcode40.cpp dfswithcutleaf/leetcode40.h leetcode658.cpp leetcode658.h leetcode661.cpp leetcode661.h leetcode665.cpp leetcode665.h)
