cmake_minimum_required(VERSION 3.23)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm main.cpp simple/halfFind.cpp simple/halfFind.h dfswithcutleaf/leetcode46.cpp dfswithcutleaf/leetcode46.h dfswithcutleaf/leetcode47.cpp dfswithcutleaf/leetcode47.h dfswithcutleaf/leetcode39.cpp dfswithcutleaf/leetcode39.h dfswithcutleaf/leetcode40.cpp dfswithcutleaf/leetcode40.h simple/leetcode658.cpp simple/leetcode658.h simple/leetcode661.cpp simple/leetcode661.h simple/leetcode665.cpp simple/leetcode665.h simple/leetcode1464.cpp simple/leetcode1464.h Tree/leetcode662/leetcode662.cpp Tree/leetcode662/leetcode662.h leetcode793.cpp leetcode793.h simple/leetcode794.cpp simple/leetcode794.h simple/leetcode1470.cpp simple/leetcode1470.h leetcode1471.cpp leetcode1471.h leetcode946.cpp leetcode946.h simple/leetcode1475.cpp simple/leetcode1475.h leetcode687.cpp leetcode687.h leetcode646.cpp leetcode646.h simple/leetcode1582.cpp simple/leetcode1582.h
        tree/leetcode652.cpp tree/leetcode652.h leetcode828.cpp leetcode828.h simple/leetcode1592.cpp simple/leetcode1592.h simple/leetcode1598.cpp simple/leetcode1598.h simple/leetcode2389.cpp simple/leetcode2389.h leetcode2390.cpp leetcode2390.h leetcode857.cpp leetcode857.h)
